--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Snake Game</title>
 </head>
 <body>
-    <h1>Jogo da Conbrinha &#128580;</h1>
+    <h1>Jogo da Cobrinha &#128580;</h1>
     <!--canvas é um elemento que trabalha com a parte grafica de jogo(da a nimeação em si)-->
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
